<resources>
    <string name="app_name">SingleLife</string>

    <!-- Login UI -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_password">비밀번호를 잊으셨나요?  비밀빈호 찾기</string>
    <string name="consider">참고</string>
    <string name="id_format">- 아이디: 이메일 형식(예: abcde@naver.com)</string>
    <string name="password_format">- 비밀번호: 특수문자, 소문자, 대문자를 포함한 6자 길이의 암호</string>
    <string name="find_password_format">- 비밀번호 분실시 가입하신 이메일로 되찾을 수 있습니다.</string>
    <string name="move_register">계정이 없으신가요?  회원가입 바로가기</string>
    <string name="login_fail">로그인에 실패했습니다\n이메일 혹은 비밀번호를 확인해주세요</string>

    <!-- FindPassword UI -->
    <string name="request_email">email 발송요청</string>
    <string name="request_success">요청 성공</string>
    <string name="loading">로딩중</string>
    <string name="find_password_announcement1">메일 보내기 실패!\n이메일을 확인해 주세요.</string>
    <string name="find_password_announcement2">이메일을 보냈습니다.</string>


    <!-- Register UI -->
    <string name="nickname">닉네임</string>
    <string name="register">가입하기</string>
    <string name="nickname_format">- 닉네임은 10자 이내로 입력해주세요.</string>
    <string name="move_login">이미 계정이 있으신가요? 로그인하기</string>
    <string name="register_error">유효하지 않은 아이디 혹은 비밀번호 입니다</string>

</resources>