<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_background"
            android:hint="@string/request_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/sendEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_email"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/email_input"
            app:layout_constraintStart_toStartOf="@+id/email_input"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorNormal="@color/blue_normal"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="@string/request_success"
            app:pb_textProgress="@string/loading" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
